@@ -11,8 +11,6 @@ javaOptions in run ++= Seq("-Xmx1024m", "-Xss1m", "-XX:+UseConcMarkSweepGC", "-X
 
 fork in Test := false
 
-javaOptions in Test ++= Seq("-Xmx1024m", "-Xss1m", "-XX:+UseConcMarkSweepGC", "-XX:+CMSClassUnloadingEnabled")
-
 testOptions += Tests.Argument(TestFrameworks.JUnit, "-v", "-s")
 
 // parallelExecution in Test := false
